--- a/locales/pt_BR/LC_MESSAGES/duckduckgo.po
+++ b/locales/pt_BR/LC_MESSAGES/duckduckgo.po
@@ -237,7 +237,7 @@ msgstr "Barra de endereços:"
 
 #. as in multiple advertisements
 msgid "Ads"
-msgstr ""
+msgstr "Anúncios"
 
 msgctxt "feedback form"
 msgid "Advertisements"
@@ -326,7 +326,7 @@ msgstr "GIF Animado"
 
 msgctxt "precise_user_location"
 msgid "Anonymous location enabled."
-msgstr ""
+msgstr "Local anônimo ativado."
 
 #. Instant Answer tab name
 msgid "Answer"
@@ -375,11 +375,11 @@ msgstr "Aplicativos"
 
 msgctxt "feedback form"
 msgid "Are these ads helpful?"
-msgstr ""
+msgstr "Esses anúncios são úteis?"
 
 msgctxt "feedback form"
 msgid "Are these links helpful?"
-msgstr ""
+msgstr "Esses links são úteis?"
 
 msgid "Argentina"
 msgstr "Argentina"
@@ -504,7 +504,7 @@ msgstr "Básico"
 
 msgctxt "precise_user_location"
 msgid "Before you go, please help us understand why:"
-msgstr ""
+msgstr "Antes de partir, ajude-nos a entender o porquê:"
 
 msgid "Belgium (fr)"
 msgstr "Bélgica (fr)"
@@ -546,7 +546,7 @@ msgstr "Bloqueie rastreadores de publicidade."
 #. Part of a list of what our app can do. The app can: …
 msgctxt "welcome message eu search preference android"
 msgid "Block unsafe trackers"
-msgstr ""
+msgstr "Bloquear rastreadores não seguros"
 
 #. shown after the DuckDuckGo extension is installed
 msgctxt "welcome message"
@@ -597,7 +597,7 @@ msgstr "Idioma Preferido do Navegador"
 
 msgctxt "precise_user_location"
 msgid "Browser location unavailable."
-msgstr ""
+msgstr "Localização do navegador indisponível"
 
 msgid "Bulgaria"
 msgstr "Bulgária"
@@ -637,7 +637,7 @@ msgstr "Cancelar"
 
 msgctxt "precise_user_location"
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #. in https://duckduckgo.com/feedback under "Community Platform" header
 msgid "Care to help translate DuckDuckGo into your language?"
@@ -662,7 +662,7 @@ msgstr "Alinhamento centralizado"
 #. http://i.imgur.com/CklQ1Ku.png
 msgctxt "settings"
 msgid "Center align the results page (instead of left aligned)"
-msgstr ""
+msgstr "Alinhe ao centro a página de resultados (em vez de alinhada à esquerda)"
 "Alinhar no centro a página de resultados (em vez de alinhar à esquerda)"
 
 msgid "Change Region"
@@ -802,7 +802,7 @@ msgstr "Limpar"
 
 msgctxt "precise_user_location"
 msgid "Clear"
-msgstr ""
+msgstr "Limpar"
 
 msgid "Clear All"
 msgstr "Limpar tudo"
@@ -813,7 +813,7 @@ msgstr "Limpar Região"
 #. Part of a list of what our app can do. The app can: …
 msgctxt "welcome message eu search preference android"
 msgid "Clear data in one tap"
-msgstr ""
+msgstr "Limpar dados com um toque"
 
 msgid "Clear your cookies often?"
 msgstr "Limpar os cookies regularmente?"
@@ -1092,7 +1092,7 @@ msgstr "Violação de direitos autorais"
 
 msgctxt "SERP footer content"
 msgid "Coronavirus Info & Tips"
-msgstr ""
+msgstr "Informações e Dicas sobre o Coronavirus"
 
 #. Instant Answer Tab Name
 msgid "Coupons"
@@ -1100,7 +1100,7 @@ msgstr "Cupons"
 
 msgctxt "Place detail"
 msgid "Covid-19"
-msgstr ""
+msgstr "Covid-19"
 
 msgctxt "video-license"
 msgid "Creative Commons"
@@ -1274,7 +1274,7 @@ msgstr "Doando por privacidade"
 
 msgctxt "precise_user_location"
 msgid "Done"
-msgstr ""
+msgstr "Feito"
 
 msgid "Download file"
 msgstr "Baixar arquivo"
@@ -1351,6 +1351,11 @@ msgid ""
 "away, such that you remain anonymous. Learn more about how we designed this "
 "technology to protect your privacy %shere%s."
 msgstr ""
+"O DuckDuckGo é privado por padrão. Quando você ativa a localização, ele armazenado os dados"
+"apenas no seu dispositivo. Quando você faz uma pesquisa, seu dispositivo envia para nós, apenas"
+"o necessário para melhorar os resultados dessa pesquisa e, em seguida, descartamos esses"
+"dados, para que você permaneça anônimo. Saiba mais sobre como projetamos essa"
+"tecnologia para proteger sua privacidade %compartilhe%s."
 
 #. Used as a link to your personal settings  into the sentence <em>You can change *DuckDuckGo settings* via URL parameters by adding them after the search query</em>. See the <a href="https://duckduckgo.com/params.html">params page</a>.
 msgid "DuckDuckGo settings"
@@ -1362,7 +1367,7 @@ msgstr "E"
 
 msgctxt "settings"
 msgid "EU Android Welcome Message"
-msgstr ""
+msgstr "Mensagem de Boas-Vindas do Android"
 
 #. Stuff explaining <em>how does passphrase generation work</em>.
 #. From <a href="https://duckduckgo.com/settings.html">settings page</a>. 
@@ -1382,7 +1387,7 @@ msgstr "E-mail"
 
 msgctxt "precise_user_location"
 msgid "Enable Location"
-msgstr ""
+msgstr "Habilitar localização"
 
 msgctxt "new tab page"
 msgid "Enable Most Visited Sites"
@@ -1501,7 +1506,7 @@ msgstr "Comentário Enviado"
 
 msgctxt "feedback form"
 msgid "Feedback Sent Successfully"
-msgstr ""
+msgstr "Feedback Enviado com Sucesso"
 
 #. https://duckduckgo.com/search_box
 msgid ""
@@ -1538,7 +1543,7 @@ msgstr "Procure DuckDuckGo na lista e clique em %sTornar Padrão%s"
 
 msgctxt "precise_user_location"
 msgid "Find results closer to you."
-msgstr ""
+msgstr "Encontre resultados mais próximos de você."
 
 msgctxt "showcase_privacy"
 msgid "Find useful privacy advice on our blog."
@@ -1575,7 +1580,7 @@ msgstr "Para resultados centrados na região"
 #. Part of a list of what our app can do. The app can: …
 msgctxt "welcome message eu search preference android"
 msgid "Force encryption on websites"
-msgstr ""
+msgstr "Forçar criptografia nos sites"
 
 msgid "France"
 msgstr "França"
@@ -1639,15 +1644,15 @@ msgstr "Obtenha links da Web"
 
 msgctxt "SERP footer content"
 msgid "Get official COVID-19 info and tips to help stop the spread."
-msgstr ""
+msgstr "Obtenha informações e dicas oficiais do COVID-19 para ajudar a interromper a contaminação."
 
 msgctxt "Homepage alert button "
 msgid "Get official COVID-19 info and tips."
-msgstr ""
+msgstr "Obtenha informações e dicas oficiais sobre o COVID-19."
 
 msgid ""
 "Get seamless privacy protection on your browser for free with one download:"
-msgstr ""
+msgstr "Obtenha a proteção e privacidade perfeitas para seu navegador gratuitamente com um único download:"
 
 msgid "Get the non-JS version %s"
 msgstr "Obtenha a versão sem JavaScript %s"
@@ -1734,11 +1739,11 @@ msgstr "Ajuda"
 
 msgctxt "precise_user_location"
 msgid "Help"
-msgstr ""
+msgstr "Ajuda"
 
 msgctxt "feedback form"
 msgid "Help DuckDuckGo%s improve searches like this"
-msgstr ""
+msgstr "Ajude o DuckDuckGo%s a melhora as pesquisas como esta"
 
 msgctxt "settings"
 msgid "Help Improve DuckDuckGo"
@@ -1811,7 +1816,7 @@ msgstr "Horas"
 
 msgctxt "Place detail"
 msgid "Hours may not reflect changes made due to"
-msgstr ""
+msgstr "As horas podem não refletir as alterações feitas devido a"
 
 msgctxt "SERP footer content"
 msgid "How We Are Profitable"
@@ -1858,7 +1863,7 @@ msgstr "Hungria"
 
 msgctxt "feedback form"
 msgid "I don't want this type of results"
-msgstr ""
+msgstr "Eu não quero esse tipo de resultado"
 
 #. Title for the stuff explaining <em>how DuckDuckGo <strong>REALLY doesn't</strong> track you</em>.
 #. From the <a href="https://duckduckgo.com/settings.html">settings page</a>. 
@@ -1884,7 +1889,7 @@ msgstr "Eu gostaria de relatar uma má relevância."
 
 msgctxt "precise_user_location"
 msgid "I'm uncomfortable using my location."
-msgstr ""
+msgstr "Fico desconfortável ao usar minha localização."
 
 #. From the guide in the Feedback page: https://duckduckgo.com/feedback
 msgid "I've got a feature request."
@@ -2011,7 +2016,7 @@ msgstr "Carregamento Automático de Imagens"
 
 msgctxt "settings"
 msgid "Infinite Scroll for Images and Videos"
-msgstr ""
+msgstr "Rolagem infinita para imagens e vídeos"
 
 msgid "Install"
 msgstr "Instalar"
@@ -2081,7 +2086,7 @@ msgstr ""
 
 msgctxt "precise_user_location"
 msgid "It's not working."
-msgstr ""
+msgstr "It's not working."
 
 msgctxt "settings"
 msgid ""
@@ -2296,7 +2301,7 @@ msgstr "Carregando..."
 
 msgctxt "settings"
 msgid "Loads more image and video results when scrolling"
-msgstr ""
+msgstr "Carrega mais resultados de imagem e vídeo ao rolar"
 
 msgctxt "settings"
 msgid "Loads more image results when scrolling"
@@ -2313,7 +2318,7 @@ msgstr "Localidade"
 
 msgctxt "precise_user_location"
 msgid "Location information is stored only on your device."
-msgstr ""
+msgstr "As informações de localização são armazenadas apenas no seu dispositivo."
 
 msgctxt "video-duration"
 msgid "Long"
@@ -2438,7 +2443,7 @@ msgstr "Mais Informações"
 
 msgctxt "Ads GDPR, internal use only. Do not change"
 msgid "More Info"
-msgstr ""
+msgstr "Mais Informações"
 
 msgid "More Links"
 msgstr "Mais links"
@@ -2485,7 +2490,7 @@ msgstr "Mais em"
 
 msgctxt "precise_user_location"
 msgid "More info"
-msgstr ""
+msgstr "Mais informação"
 
 msgid "More on %s "
 msgstr "Mais em %s "
@@ -2500,7 +2505,7 @@ msgstr "Mais resultados"
 
 msgctxt "more_reviews_on_external_website"
 msgid "More reviews on %s "
-msgstr ""
+msgstr "Mais reviews em %s "
 
 msgctxt "video-duration"
 msgid "More than 20 minutes"
@@ -2513,7 +2518,7 @@ msgstr "Mais maneiras de adicionar DuckDuckGo ao %s"
 
 msgctxt "precise_user_location"
 msgid "Move map to set current location"
-msgstr ""
+msgstr "Mover mapa para definir a localização atual"
 
 #. Instant Answer Tab Name
 msgid "Movies"
@@ -2521,7 +2526,7 @@ msgstr "Filmes"
 
 msgctxt "settings"
 msgid "Multi-Step Add-to-Browser Onboarding Step"
-msgstr ""
+msgstr "Etapa de Integração do Navegador"
 
 #. in https://duckduckgo.com/newbang under "Choose Category"
 msgctxt "bangcat"
@@ -2830,7 +2835,7 @@ msgstr "Abrir uma nova aba ou janela"
 #. shown when DDG is selected after eu preference menu on android
 msgctxt "welcome message eu search preference android"
 msgid "Open app"
-msgstr ""
+msgstr "Abrir aplicativo"
 
 msgctxt "open_in_third_party_app"
 msgid "Open in %s"
@@ -2888,7 +2893,7 @@ msgstr ""
 
 msgctxt "precise_user_location"
 msgid "Other."
-msgstr ""
+msgstr "Outro."
 
 msgctxt "SERP footer content"
 msgid "Our Crash Course"
@@ -2907,6 +2912,9 @@ msgid ""
 "tracker blocker, encryption enforcer, and more. Available on %siOS & Android"
 "%s."
 msgstr ""
+"Nosso navegador privado para celular vem equipado com nosso mecanismo de pesquisa"
+"bloqueador rastreamento, aplicador de criptografia e muito mais. Disponível em %siOS e Android"
+"%s.
 
 msgctxt "showcase_traffic"
 msgid "Over %s Billion anonymous searches."
@@ -3121,10 +3129,10 @@ msgid "Privacy Blog"
 msgstr "Blog de Privacidade"
 
 msgid "Privacy Browser App"
-msgstr ""
+msgstr "Aplicativo de Navegação Privada"
 
 msgid "Privacy Browser Extension"
-msgstr ""
+msgstr "Extensão para Navegador Privada"
 
 msgid "Privacy Crash Course"
 msgstr "Curso Intensivo de Privacidade"
@@ -3144,14 +3152,14 @@ msgid "Privacy Policy"
 msgstr "Política de Privacidade"
 
 msgid "Privacy Protection For Any Device"
-msgstr ""
+msgstr "Proteção de Privacidade para Qualquer Dispositivo"
 
 #. https://duckduckgo.com/params. it is a bold header
 msgid "Privacy Settings"
 msgstr "Configurações de Privacidade"
 
 msgid "Privacy for %s"
-msgstr ""
+msgstr "Privacidade para %s"
 
 msgctxt "SERP footer content"
 msgid "Privacy in Your Inbox"
@@ -3164,7 +3172,7 @@ msgstr "Privacidade na sua Caixa de Entrada"
 #. shown when DDG is selected after eu preference menu on android
 msgctxt "welcome message eu search preference android"
 msgid "Privacy, simplified"
-msgstr ""
+msgstr "Privacidade simplificada"
 
 msgid "Privacy, simplified."
 msgstr "Privacidade, simplificada."
@@ -3173,7 +3181,7 @@ msgid "Private Search"
 msgstr "Pesquisa Privada"
 
 msgid "Private Search Engine"
-msgstr ""
+msgstr "Mecanismo de Pesquisa Privado"
 
 msgctxt "attribution"
 msgid "Producer"
@@ -3248,7 +3256,7 @@ msgstr "Rádio ou podcast"
 
 #. Placeholder will be a number. This is used to describe extension rating out of 5 stars.
 msgid "Rated %s/5"
-msgstr ""
+msgstr "Classificado %s/5"
 
 msgid "Read More"
 msgstr "Ler Mais"
@@ -3309,7 +3317,7 @@ msgid "Regular Hours Today"
 msgstr "Horário Normal de Hoje"
 
 msgid "Related Searches"
-msgstr ""
+msgstr "Pesquisas Relacionadas"
 
 msgid "Related Topics"
 msgstr "Tópicos relacionados"
@@ -3411,7 +3419,7 @@ msgstr "Aparência dos resultados"
 
 msgctxt "precise_user_location"
 msgid "Results are good enough."
-msgstr ""
+msgstr "Os resultados são bons o suficiente."
 
 #. http://i.imgur.com/OODM0bR.png 
 #. Selecting "Retro" will change the look and layout of DuckDuckGo to resemble the old site: http://i.imgur.com/toYUxqn.png 
@@ -3567,6 +3575,8 @@ msgid ""
 "Search privately with our app or extension, add private web search to your "
 "favorite browser, or search directly at %sduckduckgo.com%s."
 msgstr ""
+"Pesquise com privacidade com nosso aplicativo ou extensão, adicione pesquisas privadas no seu"
+"navegador favorito ou pesquise diretamente em %sduckduckgo.com%s."
 
 #. http://i.imgur.com/6LZAoqH.png
 msgctxt "settings"
@@ -3578,7 +3588,7 @@ msgstr ""
 
 msgctxt "search input box"
 msgid "Search the web without being tracked"
-msgstr ""
+msgstr "Pesquise na Web sem ser rastreado"
 
 msgctxt "showcase_bangs"
 msgid "Search thousands of sites directly on DuckDuckGo."
@@ -3589,7 +3599,7 @@ msgid "Searches %s using our %s"
 msgstr "Pesquisa em %s usando nosso %s"
 
 msgid "Searches related to \"%s\""
-msgstr ""
+msgstr "Pesquisas relacionadas à \"%s\""
 
 #. in https://duckduckgo.com/feedback under "Community Platform" header
 msgid "Searching for info on our XMPP chat service?"
@@ -3744,7 +3754,7 @@ msgstr "Defina DuckDuckGo como seu %smotor de busca padrão"
 
 msgctxt "precise_user_location"
 msgid "Set Manually"
-msgstr ""
+msgstr "Definir manualmente"
 
 msgid "Set as Default Search Engine"
 msgstr "Configure como Motor de Busca Padrão"
@@ -3755,7 +3765,7 @@ msgstr "Definir como página inicial"
 
 msgctxt "precise_user_location"
 msgid "Set your location manually, or ensure Location Services is enabled."
-msgstr ""
+msgstr "Definir sua localização manualmente ou verifique se os Serviços de Localização estão habilitados."
 
 #. In the top dropdown menu  ("More" > "Settings")
 msgid "Settings"
@@ -3779,11 +3789,11 @@ msgstr ""
 
 msgctxt "feedback form"
 msgid "Share feedback for this result."
-msgstr ""
+msgstr "Compartilhe feedback para esse resultado."
 
 msgctxt "feedback form"
 msgid "Share feedback on your search results."
-msgstr ""
+msgstr "Compartilhe feedbacks sobre seus resultados de pesquisa."
 
 #. in https://duckduckgo.com/newbang under "Bang category " inside the drop-menu
 msgid "Shopping"
@@ -3850,7 +3860,7 @@ msgstr ""
 
 msgctxt "settings"
 msgid "Show occasional reminders to add DuckDuckGo to your devices"
-msgstr ""
+msgstr "Mostrar lembretes ocasionais para adicionar o DuckDuckGo aos seus dispositivos"
 
 msgctxt "settings"
 msgid ""
@@ -3912,7 +3922,7 @@ msgstr ""
 
 msgctxt "settings"
 msgid "Show welcome message to EU Android preference menu users"
-msgstr ""
+msgstr "Mostrar mensagem de boas-vindas ao usuário no menu de preferências do Android"
 
 msgctxt "SERP footer content"
 msgid "Show your DuckDuckGo pride with t-shirts, stickers, & more."
@@ -4088,7 +4098,7 @@ msgstr "Enviar"
 
 msgctxt "precise_user_location"
 msgid "Submit"
-msgstr ""
+msgstr "Enviar"
 
 msgctxt "email newsletter"
 msgid "Subscribe"
@@ -4346,7 +4356,7 @@ msgid "This will reset your saved settings to default values. Continue?"
 msgstr "Isto retornará suas opções salvas aos valores padrão. Continuar?"
 
 msgid "Tired of being tracked online? %sWe can help.%s"
-msgstr ""
+msgstr "Cansado de ser rastreado online? %sNós podemos ajudar.%s"
 
 msgid "Today"
 msgstr "Hoje"
@@ -4388,7 +4398,7 @@ msgstr "Tente palavras-chave diferentes."
 
 msgctxt "precise_user_location"
 msgid "Try enabling anonymous location for more accurate results."
-msgstr ""
+msgstr "Tente ativar a localização anônima para obter resultados mais precisos."
 
 msgctxt "noresults"
 msgid "Try fewer keywords."
@@ -4513,7 +4523,7 @@ msgstr "Unidades de medida"
 
 msgctxt "precise_user_location"
 msgid "Update"
-msgstr ""
+msgstr "Atualizar"
 
 msgctxt "new user poll"
 msgid "Upgrading to full-time user"
@@ -4576,6 +4586,8 @@ msgid ""
 "Viewing ads is privacy protected by DuckDuckGo. Ad clicks are managed by "
 "Microsoft's ad network"
 msgstr ""
+"A visualização de anúncios é protegida pela privacidade do DuckDuckGo. Os cliques nos anúncios são gerenciados pela"
+"Rede de publicidade da Microsoft"
 
 msgctxt "mobile promotion on desktop"
 msgid ""
@@ -4599,7 +4611,7 @@ msgstr "W"
 
 msgctxt "precise_user_location"
 msgid "Waiting For Location..."
-msgstr ""
+msgstr "Aguardando a localização..."
 
 msgctxt "size"
 msgid "Wallpaper"
@@ -4611,7 +4623,7 @@ msgstr "Quer desenvolver uma resposta instantânea?"
 
 msgctxt "feedback form"
 msgid "Want to tell us a bit more?"
-msgstr ""
+msgstr "Quer nos contar um pouco mais?"
 
 #. e.g. Video search viewing options: http://i.imgur.com/ofZeLRn.png
 msgid "Watch Here"
@@ -4679,6 +4691,8 @@ msgid ""
 "We don't store your personal info. We don't follow you around with ads. We "
 "don't track you. Ever."
 msgstr ""
+"Não armazenamos suas informações pessoais. Não te perseguimos com anúncios. Nós"
+"não te espionamos. Nem hoje, nem nunca."
 
 msgctxt "reasons-to-use-duckduckgo"
 msgid "We don't store your personal information."
@@ -4820,7 +4834,7 @@ msgstr "Do que você gostou?"
 
 msgctxt "feedback form"
 msgid "What do you think?"
-msgstr ""
+msgstr "O que você acha?"
 
 #. Click "What is this?" - http://i.imgur.com/KhmRHth.png
 #. Then in the cloud save box - http://i.imgur.com/ta4V0Xy.png
@@ -4970,6 +4984,8 @@ msgid ""
 "You're now searching privately in Chrome. Use our app instead of Chrome to "
 "browse privately too. It’s already installed and can:"
 msgstr ""
+"Agora você está pesquisando em particular no Chrome. Use também nosso aplicativo em vez do Chrome para"
+"navegue em particular. Ele já está instalado e pode:"
 
 msgid "You're now searching with privacy!"
 msgstr "Agora você está pesquisando com privacidade!"
@@ -4983,7 +4999,7 @@ msgstr ""
 
 msgctxt "precise_user_location"
 msgid "You've chosen not to set your location."
-msgstr ""
+msgstr "Você optou por não definir sua localização."
 
 msgid ""
 "YouTube (owned by Google) does not let you watch videos anonymously. As "
@@ -5127,14 +5143,14 @@ msgid "permanently"
 msgstr "permanentemente"
 
 msgid "private search"
-msgstr ""
+msgstr "pesquisa particular"
 
 #. The English version is not capitalized...
 msgid "search too long"
 msgstr "pesquisa muito grande"
 
 msgid "site encryption"
-msgstr ""
+msgstr "criptografia no site"
 
 #. Message displayed sometimes at top of results -- in the context of safe search.
 msgid "temporarily"
@@ -5161,7 +5177,7 @@ msgid "track"
 msgstr "rastrear"
 
 msgid "tracker blocking"
-msgstr ""
+msgstr "bloqueio de rastreador"
 
 #~ msgid "Auto-load:"
 #~ msgstr "Carregado automaticamente:"
